# crust8

./: Cargo.toml  README.md
chip8-engine/: Cargo.toml
chip8-engine/src/: display.rs  heap.rs  instruction.rs  lib.rs  machine.rs  quirks.rs  registers.rs  stack.rs  timers.rs  word.rs
src/: main.rs
