[package]
name = "crust"
authors = ["Christian Lowe <christianlowe.cl@gmail.com>"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8-engine = { path = "chip8-engine" }
log = "0.4.17"
env_logger = "0.9.0"
pixels = "0.9.0"
game-loop = { version = "0.9.1", features = ["window"] }
winit = "0.26.1"
winit_input_helper = "0.12.0"
clap = { version = "3.2.8", features = ["derive"] }
