[package]
name = "chip8-engine"
authors = ["Christian Lowe <christianlowe.cl@gmail.com>"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
winit = "0.26.1"
fastrand = "1.7.0"
